Updated logger. Fixed a few things.