@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>SolarTracer</groupId>
   <artifactId>solartracer</artifactId>
@@ -12,14 +13,50 @@
     <app.name>solartracer</app.name>
     <project.build.output.dir>${project.basedir}/bin/</project.build.output.dir>
     <staging.dir>${project.build.directory}/staging</staging.dir>
+    <javafx.version>17.0.7</javafx.version>
+    <javafx.maven.version>0.0.8</javafx.maven.version>
+      <log4j.version>2.17.2</log4j.version>
   </properties>
-  
+
+  <dependencies>
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>${javafx.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-fxml</artifactId>
+          <version>${javafx.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fazecast</groupId>
+          <artifactId>jSerialComm</artifactId>
+          <version>2.9.3</version>
+      </dependency>
+      <dependency>
+          <groupId>org.xerial</groupId>
+          <artifactId>sqlite-jdbc</artifactId>
+          <version>3.41.2.1</version>
+      </dependency>
+  </dependencies>
+
   <build>
       <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.11.0</version>
+            <version>3.10.1</version>
             <configuration>
               <source>17</source>
               <target>17</target>
@@ -28,20 +65,24 @@
           <plugin>
               <groupId>org.openjfx</groupId>
               <artifactId>javafx-maven-plugin</artifactId>
-              <version>0.0.8</version>
-              <configuration>
-                  <stripDebug>true</stripDebug>
-                  <compress>2</compress>
-                  <noHeaderFiles>true</noHeaderFiles>
-                  <noManPages>true</noManPages>
-                  <launcher>${app.name}</launcher>
-                  <jlinkImageName>${app.name}</jlinkImageName>
-                  <jlinkZipName>${app.name}Zip</jlinkZipName>
-                  <mainClass>${main.class}</mainClass>
-                  <options>
-                      <option>--add-modules=javafx.controls</option>
-                  </options>
-              </configuration>
+              <version>${javafx.maven.version}</version>
+              <executions>
+                  <execution>
+                      <!-- Default configuration for running with: mvn clean javafx:run -->
+                      <id>default-cli</id>
+                      <configuration>
+                          <mainClass>
+                              ${main.class}
+                          </mainClass>
+                          <launcher>${app.name}</launcher>
+                          <jlinkZipName>${app.name}</jlinkZipName>
+                          <jlinkImageName>${app.name}</jlinkImageName>
+                          <noManPages>true</noManPages>
+                          <stripDebug>true</stripDebug>
+                          <noHeaderFiles>true</noHeaderFiles>
+                      </configuration>
+                  </execution>
+              </executions>
           </plugin>
           <plugin>
             <artifactId>maven-resources-plugin</artifactId>
@@ -97,46 +138,6 @@
                 </execution>
               </executions>
             </plugin>
-            <plugin>
-            <groupId>com.akathist.maven.plugins.launch4j</groupId>
-            <artifactId>launch4j-maven-plugin</artifactId>
-            <version>2.1.2</version>
-            <executions>
-                <execution>
-                    <id>l4j-clui</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>launch4j</goal>
-                    </goals>
-                    <configuration>
-                        <headerType>gui</headerType>
-                        <jar>${project.build.directory}/${project.artifactId}-${project.version}-shaded.jar</jar>
-                        <outfile>${project.build.output.dir}/solartracer.exe</outfile>
-                        <downloadUrl>http://java.com/download</downloadUrl>
-                        <classPath>
-                            <mainClass>${main.class}</mainClass>
-                        </classPath>
-                        <icon>src/main/resources/icon/application.ico</icon>
-                        <jre>
-                            <minVersion>1.8.0</minVersion>
-                            <jdkPreference>preferJre</jdkPreference>
-                        </jre>
-                        <versionInfo>
-                            <fileVersion>1.0.0.0</fileVersion>
-                            <txtFileVersion>${project.version}</txtFileVersion>
-                            <fileDescription>${project.name}</fileDescription>
-                            <copyright>2020 Alfred Laderoute</copyright>
-                            <productVersion>1.0.0.0</productVersion>
-                            <txtProductVersion>1.0.0.0</txtProductVersion>
-                            <productName>${project.name}</productName>
-                            <companyName>Alfred Laderoute</companyName>
-                            <internalName>solartracer</internalName>
-                            <originalFilename>solartracer.exe</originalFilename>
-                        </versionInfo>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
       </plugins>
   </build>
   <pluginRepositories>
@@ -145,76 +146,4 @@
           <url>https://repository.apache.org/content/repositories/snapshots/</url>
       </pluginRepository>
   </pluginRepositories>
-  
-  <dependencies>
-      <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-api</artifactId>
-          <version>2.17.1</version>
-      </dependency>
-      <dependency>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-slf4j-impl</artifactId>
-          <version>2.17.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-controls</artifactId>
-        <version>17.0.2</version>
-    </dependency>
-      <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-fxml</artifactId>
-          <version>17.0.2</version>
-      </dependency>
-      <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-base</artifactId>
-          <version>17.0.2</version>
-      </dependency>
-      <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-graphics </artifactId>
-          <version>17.0.2</version>
-          <classifier>win</classifier>
-      </dependency>
-      <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-graphics </artifactId>
-          <version>17.0.2</version>
-          <classifier>linux</classifier>
-      </dependency>
-      <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-graphics </artifactId>
-          <version>17.0.2</version>
-          <classifier>mac</classifier>
-      </dependency>
-	<dependency>
-	    <groupId>com.fazecast</groupId>
-	    <artifactId>jSerialComm</artifactId>
-	    <version>2.9.3</version>
-	</dependency>
-    <dependency>
-	    <groupId>org.xerial</groupId>
-	    <artifactId>sqlite-jdbc</artifactId>
-	    <version>3.41.2.1</version>
-	</dependency>
-    <dependency>
-        <groupId>commons-net</groupId>
-        <artifactId>commons-net</artifactId>
-        <version>3.9.0</version>
-        <exclusions>
-            <exclusion>
-                <groupId>commons-io</groupId>
-                <artifactId>commons-io</artifactId>
-            </exclusion>
-        </exclusions>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>3.3.1</version>
-    </dependency>
-  </dependencies>
 </project>
